[gd_scene load_steps=4 format=3 uid="uid://cpm62f6bbyfpl"]

[ext_resource type="Script" path="res://src/inventory.gd" id="1_ajjgg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfxvm"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ow18"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Inventory" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ajjgg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qfxvm")

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Control/VBoxContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 21

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7ow18")

[node name="Name" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Пусто"

[node name="PanelContainer2" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7ow18")

[node name="Description" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "Пустая ячейка"

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7ow18")

[node name="ButtonsContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Use" type="Button" parent="Control/VBoxContainer/HBoxContainer/PanelContainer/ButtonsContainer"]
layout_mode = 2
text = "Использовать"

[node name="Trash" type="Button" parent="Control/VBoxContainer/HBoxContainer/PanelContainer/ButtonsContainer"]
layout_mode = 2
text = "Выбросить"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/PanelContainer/ButtonsContainer/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/PanelContainer/ButtonsContainer/Trash" to="." method="_on_trash_pressed"]
